# kakehashi

./: .gitignore  README.md  config.example.json  config.json  main.py  pyproject.toml  requirements.txt  start.sh
.claude/: settings.local.json
src/: app.py
src/core/: config_manager.py  sync_manager.py  xml_handler.py
src/media/: logo_extractor.py  miximage.py  processor.py
src/media/box3d/: __init__.py  base.py  dialog.py  ps2.py
src/widgets/: custom_inputs.py
